<resources>
    <string name="app_name">Projet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="fragment1">Liste des habitats</string>
    <string name="fragment2">Mon habitat</string>
    <string name="fragment3">Calendrier</string>
    <string name="fragment4">Mes notifications</string>
    <string name="fragment5">À propos</string>
    <string name="deconnexion">Compte</string>
    <string name="menu5">À propos</string>
    <string name="floor">ETAGE</string>
    <string name="appliance">équipement</string>
    <string name="appliances">appliances</string>
    <string name="ok">ok</string>

</resources>