<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_first"
        android:icon="@drawable/habitat"
        android:title="@string/fragment1" />
    <item
        android:id="@+id/nav_second"
        android:icon="@drawable/profil"
        android:title="@string/fragment2" />
    <item
        android:id="@+id/nav_third"
        android:icon="@drawable/profil"
        android:title="@string/fragment3" />
    <item
        android:id="@+id/nav_fourth"
        android:icon="@drawable/profil"
        android:title="@string/fragment4" />
    <item
        android:id="@+id/nav_fifth"
        android:icon="@drawable/profil"
        android:title="@string/fragment5" />
    <item
        android:id="@+id/nav_sixth"
        android:icon="@drawable/profil"
        android:title="@string/deconnexion" />
</menu>

